Light up buttons when pressed

--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
               <div class="key-row">
                 <div class="key-div">
                   <span class="letter">S</span>
-                  <img id="s" class="key" src='public/Key3.png' alt="D"/>
+                  <img id="s" class="key 83" src='public/Key3.png' alt="D"/>
                 </div>
                 <div class="key-div">
                   <span class="letter">D</span>
-                  <img id="d" class="key" src='public/Key3.png' alt="F"/>
+                  <img id="d" class="key 68" src='public/Key3.png' alt="F"/>
                 </div>
                 <div class="key-div">
                   <span class="letter">F</span>
-                  <img id="f" class="key" src='public/Key3.png' alt="G"/>
+                  <img id="f" class="key 70" src='public/Key3.png' alt="G"/>
                 </div>
               </div>
               <div class="loader">
@@ -163,15 +163,15 @@
               <div class="key-row">
                 <div class="key-div">
                   <span class="letter">J</span>
-                  <img id="j" class="key" src='public/Key3.png' alt="H"/>
+                  <img id="j" class="key 74" src='public/Key3.png' alt="H"/>
                 </div>
                 <div class="key-div">
                   <span class="letter">K</span>
-                  <img id="k" class="key" src='public/Key3.png' alt="J"/>
+                  <img id="k" class="key 75" src='public/Key3.png' alt="J"/>
                 </div>
                 <div class="key-div">
                   <span class="letter">L</span>
-                  <img id="l" class="key" src='public/Key3.png' alt="K"/>
+                  <img id="l" class="key 76" src='public/Key3.png' alt="K"/>
                 </div>
               </div>
             </div>
