Require sample title, hide loader on failure

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <form enctype="multipart/form-data" id="sound-uploader">
                 <input id="file" name="file" type="file" class="file-upload input-width"/>
                 <label for="file" class="upload-label">Upload Loop</label>
-                <input name="title" placeholder="Loop Name" class="input input-width" type="text"/>
+                <input name="title" placeholder="Loop Name" class="input input-width" type="text" required/>
                 <input type="submit" class="submit-btn"/>
               </form>
             </div>
@@ -261,7 +261,7 @@
                         <label for="s-oneShot" class="upload-label modal-input">Upload Sample</label>
                       </div>
                       <div class="flex-center">
-                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text" required/>
                       </div>
                       <div class="flex-center">
                         <input type="submit" class="submit-btn modal-input"/>
@@ -333,7 +333,7 @@
                         <label for="d-oneShot" class="upload-label modal-input">Upload Sample</label>
                       </div>
                       <div class="flex-center">
-                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text" required/>
                       </div>
                       <div class="flex-center">
                         <input type="submit" class="submit-btn modal-input"/>
@@ -405,7 +405,7 @@
                         <label for="f-oneShot" class="upload-label modal-input">Upload Sample</label>
                       </div>
                       <div class="flex-center">
-                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text" required/>
                       </div>
                       <div class="flex-center">
                         <input type="submit" class="submit-btn modal-input"/>
@@ -477,7 +477,7 @@
                         <label for="j-oneShot" class="upload-label modal-input">Upload Sample</label>
                       </div>
                       <div class="flex-center">
-                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text" required/>
                       </div>
                       <div class="flex-center">
                         <input type="submit" class="submit-btn modal-input"/>
@@ -549,7 +549,7 @@
                         <label for="k-oneShot" class="upload-label modal-input">Upload Sample</label>
                       </div>
                       <div class="flex-center">
-                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text" required/>
                       </div>
                       <div class="flex-center">
                         <input type="submit" class="submit-btn modal-input"/>
@@ -621,7 +621,7 @@
                         <label for="l-oneShot" class="upload-label modal-input">Upload Sample</label>
                       </div>
                       <div class="flex-center">
-                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text"/>
+                        <input name="title" placeholder="Sample Name" class="input input-width modal-input" type="text" required/>
                       </div>
                       <div class="flex-center">
                         <input type="submit" class="submit-btn modal-input"/>
@@ -658,11 +658,6 @@
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
                   <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
                 </div>
-                <div class="modal-loader">
-                  <div class="outer"></div>
-                  <div class="middle"></div>
-                  <div class="inner"></div>
-                </div>
               </div>
             </div>
           </div>
@@ -684,11 +679,6 @@
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
                   <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-                </div>
-                <div class="modal-loader">
-                  <div class="outer"></div>
-                  <div class="middle"></div>
-                  <div class="inner"></div>
                 </div>
               </div>
             </div>
